refactor domain register verify
